# daily-todo-sync-prod

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  README.md  compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  manage.py  pyproject.toml
apps/api/accounts/: admin.py  api.py  authentication.py  models.py  tests.py  tokens.py
apps/api/accounts/migrations/: 0001_initial.py  0002_sync_account_name.py  0003_emailverificationcode_googleloginexchangecode.py
apps/api/daily_todo/: ai_api.py  asgi.py  settings.py  tests.py  urls.py  wsgi.py
apps/api/device_timeline/: api.py  apps.py  models.py  segmentation.py  tests.py
apps/api/device_timeline/migrations/: 0001_initial.py
apps/api/diagnostics/: admin.py  api.py  models.py  tests.py
apps/api/diagnostics/migrations/: 0001_initial.py
apps/api/integrations/: admin.py  api.py  google_calendar.py  models.py  services.py  tests.py
apps/api/integrations/migrations/: 0001_initial.py  0002_google_account_binding.py  0003_multiple_google_connections.py
apps/api/mobility/: api.py  apps.py  export.py  geo.py  models.py  segmentation.py  tests.py
apps/api/mobility/migrations/: 0001_initial.py  0002_locationpoint_activity_type.py
apps/api/todos/: admin.py  api.py  apps.py  models.py  place_search.py  services.py  tests.py
apps/api/todos/migrations/: 0001_initial.py  0002_reminders_recurrence_and_order.py  0003_task_note.py  0004_taskattachment.py  0005_occurrence_note_pin_and_attachment_order.py  0006_long_term_content_and_repair_legacy_attachments.py  0011_todosynccursor.py  (+7 more)
(+221 files in other folders)
