[project]
name = "daily-todo-sync-api"
version = "0.1.0"
description = "Django API for Daily Todo Sync"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "django-cors-headers>=4.6,<5",
    "django-ninja>=1.3,<2",
    "dj-database-url>=2.3,<3",
    "gunicorn>=23,<24",
    "haversine>=2.9,<3",
    "psycopg[binary]>=3.2,<4",
    "pyjwt>=2.10,<3",
    "requests>=2.32,<3",
    "whitenoise>=6.8,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<1",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "daily_todo",
    "daily_todo.*",
    "accounts",
    "accounts.*",
    "diagnostics",
    "diagnostics.*",
    "integrations",
    "integrations.*",
    "mobility",
    "mobility.*",
    "todos",
    "todos.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
